Add initial locales for vi

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,157 +1,115 @@
 {
-    "Account Check": "",
     "Admin": "",
-    "age": "",
-    "Age": "",
-    "all": "",
+    "Age": "Tuổi",
     "All clients": "",
     "Analysis": "",
     "ANC": "",
-    "ANC Report": "",
-    "ANC Visit": "",
-    "anc_id": "",
-    "Back": "",
-    "Back to Pregnancy Compartments": "",
-    "Basic Information": "",
-    "Birth Report": "",
+    "Back": "Quay lại",
+    "Basic Information": "Thông tin Cơ bản",
     "Child": "",
     "Child Height": "",
     "Child Height Monitoring": "",
-    "Child height vs month": "",
     "Child Weight": "",
     "Child Weight Monitoring": "",
-    "Child weight vs month": "",
-    "Client": "",
     "Client Records": "",
-    "client_type": "",
     "cm": "",
-    "Commune": "",
-    "Compartments": "",
+    "Compartments": "Phân loại Nguy cơ",
     "could not find any edd": "",
     "could not find any location": "",
-    "could not find any risk cartegorization": "",
-    "Country": "",
+    "Could not find any risk categorization": "",
     "Current EDD": "",
-    "Current Gravidity": "",
+    "Current Gravidity": "Số lần đã mang thai",
     "current nutrition": "",
-    "Current Parity": "",
+    "Current Parity": "Số lần đã đẻ",
     "current pregnancy": "",
-    "Current symptoms": "",
+    "Current symptoms": "Triệu chứng hiện tại",
     "Current weight": "",
-    "Date": "",
-    "date_of_birth": "",
+    "Date": "Ngày",
     "Days since birth": "",
-    "Death Report": "",
-    "Delivery Planning": "",
-    "Departure Code": "",
-    "District": "",
-    "ec_child": "",
-    "ec_family_member": "",
-    "ec_woman": "",
-    "EDD": "",
-    "event_id": "",
-    "EventDate": "",
-    "Family Member Registration": "",
-    "feeding_category": "",
-    "gravidity": "",
+    "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
+    "EDD": "Ngày đẻ dự kiến",
+    "Event Date": "Ngày",
+    "Export data": "Tải về",
+    "first": "Trang đầu",
     "Gravidity": "",
-    "growth_status": "",
-    "health_worker_location_name": "",
-    "health_worker_name": "",
     "height": "",
-    "high": "",
     "High Risk": "",
-    "Home": "",
-    "Home Visit Report": "",
+    "Home": "Trang chủ",
     "Household": "",
-    "ID": "",
-    "inappropriately fed": "",
+    "ID": "Mã ID",
+    "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
+    "Inappropriate Feeding": "",
     "Inappropriately Fed": "",
     "kg": "",
-    "Length/Height Monitoring": "",
-    "lmp_edd": "",
-    "Location": "",
+    "last": "Trang cuối",
+    "Location": "Địa điểm",
     "Location of birth": "",
     "Location of residence": "",
     "Location of Residence": "",
-    "location_id": "",
     "Locations": "",
     "Log face": "",
-    "Log Face": "",
-    "logface_risk": "",
-    "Login": "",
-    "low": "",
+    "Log Face": "Danh sách tin nhắn",
     "Low Risk": "",
-    "message": "",
-    "Message": "",
-    "MIECD VIETNAM": "",
-    "Monthly Nutrition Report": "",
-    "NBC & PNC": "",
-    "NBC & PNC_CHILD": "",
-    "NBC & PNC_WOMAN": "",
+    "Message": "Nội dung báo cáo",
+    "Mother's Weight": "",
+    "Mother's Weight Tracking": "Theo dõi Cân nặng bà mẹ",
+    "NBC & PNC": "SAU SINH",
     "Newborn Report": "",
-    "no": "",
+    "next": "Tiếp",
+    "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
     "no risk": "",
-    "No Risk": "",
+    "No Risk": "Bình thường",
     "no risk category": "",
-    "not set": "",
     "Not Set": "",
-    "Nutrition": "",
+    "Nutrition": "DINH DƯỠNG",
     "Nutrition Registration": "",
     "Nutrition Report": "",
-    "nutrition_status": "",
-    "OpenSRP": "Đăng nhập",
-    "overweight": "",
+    "nutrition-chart": "",
+    "OpenSRP": "",
     "Overweight": "",
-    "parity": "",
     "Parity": "",
-    "Patient Details": "",
-    "Patient ID": "",
-    "Postnatal and Newborn Care": "",
-    "Pregnancy": "",
-    "Pregnancy Detection": "",
-    "Pregnancy Identification": "",
+    "Patient": "Bà mẹ",
+    "Patient Details": "Thông tin Bà mẹ",
+    "Patient ID": "Bà mẹ",
+    "Pregnancy": "THAI SẢN",
     "Pregnancy Registration": "",
+    "pregnancy-chart": "",
+    "previous": "Trước",
     "Previous Pregnancy Risk": "",
-    "Province": "",
-    "red": "",
-    "Red Alert": "",
-    "Red Alert Report": "",
-    "red-alert": "",
-    "Refusal Code": "",
-    "Report": "",
-    "Reporter": "",
+    "Red Alert": "Báo động đỏ",
+    "Report": "Loại báo cáo",
+    "Reporter": "Người gửi",
     "Reports": "",
-    "Response Report": "",
     "risk": "",
-    "Risk Cartegorization": "",
     "Risk category": "",
-    "Risk Level": "",
+    "Risk Level": "Phân loại Nguy cơ Chọn",
     "Roles": "",
-    "Search ID, Reporter, Patients": "",
-    "Select Location": "",
-    "Select risk": "",
-    "Select Type": "",
-    "severe wasting": "",
+    "Search ID, Reporter, Patients": "Tìm kiếm",
+    "Select Location": "Địa điểm Chọn",
+    "select pregnancy": "",
+    "Select risk": "Phân loại Nguy cơ Chọn",
+    "Select Type": "Loại tin nhắn Chọn",
+    "Selected Commune": "",
     "Severe Wasting": "",
-    "Sign Out": "",
-    "sms_type": "",
-    "Social Determinants": "",
-    "stunted": "",
+    "Showing reports for:": "Xem báo cáo của:",
+    "SMS Type": "Loại báo cáo",
     "Stunted": "",
+    "Stunting": "",
     "Teams": "",
-    "Total": "",
-    "Type": "",
-    "up": "",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for\npatients in your geographical location. The Module covers the whole pregnancy period\nfrom conception to delivery and includes Pregnancy Registration, ANC visits, Birth\nreports/Death reports, Risk Reports, Risk alerts and ResponseReports.": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực. Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở….. ",
+    "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
+    "Total": "Tổng",
+    "Type": "Loại tin nhắn Chọn",
     "Users": "",
-    "Vietnam": "",
-    "View": "",
-    "View the latest message updates about your patients": "",
-    "Village": "",
+    "View": "Xem",
+    "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
+    "Wasting": "",
     "weight": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
-    "Welcome to the MIECD dashboard{}": "",
-    "Welcome to the pregnancy dashboard": ""
+    "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
+    "Welcome to the pregnancy dashboard": "Hợp phần Thai sản ",
+    "NBC & PNC_CHILD": "",
+    "NBC & PNC_WOMAN": ""
 }
