--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,36 +1,22 @@
 {
-    "Account Check": "",
     "Admin": "",
-    "age": "",
     "Age": "",
-    "all": "",
     "All clients": "",
     "Analysis": "",
     "ANC": "",
-    "ANC Report": "",
-    "ANC Visit": "",
-    "anc_id": "",
     "Back": "",
-    "Back to Pregnancy Compartments": "",
     "Basic Information": "",
-    "Birth Report": "",
     "Child": "",
     "Child Height": "",
     "Child Height Monitoring": "",
-    "Child height vs month": "",
     "Child Weight": "",
     "Child Weight Monitoring": "",
-    "Child weight vs month": "",
-    "Client": "",
     "Client Records": "",
-    "client_type": "",
     "cm": "",
-    "Commune": "",
     "Compartments": "",
     "could not find any edd": "",
     "could not find any location": "",
-    "could not find any risk cartegorization": "",
-    "Country": "",
+    "Could not find any risk categorization": "",
     "Current EDD": "",
     "Current Gravidity": "",
     "current nutrition": "",
@@ -39,119 +25,91 @@
     "Current symptoms": "",
     "Current weight": "",
     "Date": "",
-    "date_of_birth": "",
     "Days since birth": "",
-    "Death Report": "",
-    "Delivery Planning": "",
-    "Departure Code": "",
-    "District": "",
-    "ec_child": "",
-    "ec_family_member": "",
-    "ec_woman": "",
+    "Display of all messages received from MIECD in chronological order": "",
     "EDD": "",
-    "event_id": "",
-    "EventDate": "",
-    "Family Member Registration": "",
-    "feeding_category": "",
-    "gravidity": "",
+    "Event Date": "",
+    "Export data": "",
+    "first": "",
     "Gravidity": "",
-    "growth_status": "",
-    "health_worker_location_name": "",
-    "health_worker_name": "",
     "height": "",
-    "high": "",
     "High Risk": "",
     "Home": "",
-    "Home Visit Report": "",
     "Household": "",
     "ID": "",
-    "inappropriately fed": "",
+    "Important analysis and indicators generated from collected data": "",
+    "Inappropriate Feeding": "",
     "Inappropriately Fed": "",
     "kg": "",
-    "Length/Height Monitoring": "",
-    "lmp_edd": "",
+    "last": "",
     "Location": "",
     "Location of birth": "",
     "Location of residence": "",
     "Location of Residence": "",
-    "location_id": "",
     "Locations": "",
     "Log face": "",
     "Log Face": "",
-    "logface_risk": "",
-    "Login": "",
-    "low": "",
     "Low Risk": "",
-    "message": "",
     "Message": "",
-    "MIECD VIETNAM": "",
-    "Monthly Nutrition Report": "",
+    "Mother's Weight": "",
+    "Mother's Weight Tracking": "",
     "NBC & PNC": "",
-    "NBC & PNC_CHILD": "",
-    "NBC & PNC_WOMAN": "",
     "Newborn Report": "",
-    "no": "",
+    "next": "",
+    "No Patient Level data to show for this commune": "",
     "No providers": "",
     "no risk": "",
     "No Risk": "",
     "no risk category": "",
-    "not set": "",
     "Not Set": "",
     "Nutrition": "",
     "Nutrition Registration": "",
     "Nutrition Report": "",
-    "nutrition_status": "",
+    "nutrition-chart": "",
     "OpenSRP": "",
-    "overweight": "",
     "Overweight": "",
-    "parity": "",
     "Parity": "",
+    "Patient": "",
     "Patient Details": "",
     "Patient ID": "",
-    "Postnatal and Newborn Care": "",
     "Pregnancy": "",
-    "Pregnancy Detection": "",
-    "Pregnancy Identification": "",
     "Pregnancy Registration": "",
+    "pregnancy-chart": "",
+    "previous": "",
     "Previous Pregnancy Risk": "",
-    "Province": "",
-    "red": "",
     "Red Alert": "",
-    "Red Alert Report": "",
-    "red-alert": "",
-    "Refusal Code": "",
     "Report": "",
     "Reporter": "",
     "Reports": "",
-    "Response Report": "",
     "risk": "",
-    "Risk Cartegorization": "",
     "Risk category": "",
     "Risk Level": "",
     "Roles": "",
     "Search ID, Reporter, Patients": "",
     "Select Location": "",
+    "select pregnancy": "",
     "Select risk": "",
     "Select Type": "",
-    "severe wasting": "",
+    "Selected Commune": "",
     "Severe Wasting": "",
-    "Sign Out": "",
-    "sms_type": "",
-    "Social Determinants": "",
-    "stunted": "",
+    "Showing reports for:&emsp;": "Showing reports for:&emsp;",
+    "SMS Type": "",
     "Stunted": "",
+    "Stunting": "",
     "Teams": "",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for\npatients in your geographical location. The Module covers the whole pregnancy period\nfrom conception to delivery and includes Pregnancy Registration, ANC visits, Birth\nreports/Death reports, Risk Reports, Risk alerts and ResponseReports.": "",
+    "This is the aggregation and categorization of patients data": "",
     "Total": "",
     "Type": "",
-    "up": "",
     "Users": "",
-    "Vietnam": "",
     "View": "",
-    "View the latest message updates about your patients": "",
-    "Village": "",
+    "View the latest message updates about your patients.": "",
+    "Wasting": "",
     "weight": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
-    "Welcome to the MIECD dashboard{}": "",
-    "Welcome to the pregnancy dashboard": ""
+    "Welcome to the MIECD dashboard": "",
+    "Welcome to the pregnancy dashboard": "",
+    "NBC & PNC_CHILD": "",
+    "NBC & PNC_WOMAN": ""
 }
