--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -97,7 +97,7 @@
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for\npatients in your geographical location. The Module covers the whole pregnancy period\nfrom conception to delivery and includes Pregnancy Registration, ANC visits, Birth\nreports/Death reports, Risk Reports, Risk alerts and ResponseReports.": "",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>",
     "This is the aggregation and categorization of patients data": "",
     "Total": "",
     "Type": "",
