--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -2,7 +2,7 @@
     "Admin": "",
     "Age": "Tuổi",
     "All clients": "",
-    "Analysis": "",
+    "Analysis": "Báo cáo phân tích",
     "ANC": "",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
@@ -92,12 +92,12 @@
     "Select Type": "Loại tin nhắn Chọn",
     "Selected Commune": "",
     "Severe Wasting": "",
-    "Showing reports for:": "Xem báo cáo của:",
+    "Showing reports for:&emsp;": "Showing reports for:&emsp;",
     "SMS Type": "Loại báo cáo",
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for\npatients in your geographical location. The Module covers the whole pregnancy period\nfrom conception to delivery and includes Pregnancy Registration, ANC visits, Birth\nreports/Death reports, Risk Reports, Risk alerts and ResponseReports.": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực. Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở….. ",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
     "Total": "Tổng",
     "Type": "Loại tin nhắn Chọn",
