Update locale files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -86,10 +86,10 @@
     "Risk Level": "",
     "Roles": "",
     "Search ID, Reporter, Patients": "",
-    "Select Location": "",
+    "Select location": "",
     "select pregnancy": "",
     "Select risk": "",
-    "Select Type": "",
+    "Select type": "",
     "Selected Commune": "",
     "Severe Wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
