--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -86,10 +86,10 @@
     "Risk Level": "Phân loại Nguy cơ Chọn",
     "Roles": "",
     "Search ID, Reporter, Patients": "Tìm kiếm",
-    "Select Location": "Địa điểm Chọn",
+    "Select location": "Địa điểm Chọn",
     "select pregnancy": "",
     "Select risk": "Phân loại Nguy cơ Chọn",
-    "Select Type": "Loại tin nhắn Chọn",
+    "Select type": "Loại tin nhắn Chọn",
     "Selected Commune": "",
     "Severe Wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
