Update locale files

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -33,7 +33,7 @@
     "first": "Trang đầu",
     "Gravidity": "",
     "height": "",
-    "High Risk": "",
+    "High Risk": "Báo động đỏ",
     "Home": "Trang chủ",
     "Household": "",
     "ID": "Mã ID",
@@ -58,7 +58,7 @@
     "next": "Tiếp",
     "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
-    "no risk": "",
+    "no risk": "Bình thường ",
     "No Risk": "Bình thường",
     "no risk category": "",
     "Not Set": "",
