Update vi locale json file

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -56,6 +56,7 @@
     "NBC & PNC": "SAU SINH",
     "Newborn Report": "",
     "next": "Tiếp",
+    "No data found": "Không tìm thấy kết quả phù hợp",
     "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
     "no risk": "Bình thường ",
