Parse and update locale files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,9 @@
 {
     "Admin": "",
     "Age": "",
+    "age.days": "days",
+    "age.months": "months",
+    "age.years": "years",
     "All clients": "",
     "Analysis": "",
     "ANC": "",
@@ -33,7 +36,6 @@
     "first": "",
     "Gravidity": "",
     "height": "",
-    "High Risk": "",
     "Home": "",
     "Household": "",
     "ID": "",
@@ -48,20 +50,20 @@
     "Location of Residence": "",
     "Locations": "",
     "Log face": "",
-    "Log Face": "",
-    "Low Risk": "",
     "Message": "",
     "Mother's Weight": "",
     "Mother's Weight Tracking": "",
     "NBC & PNC": "",
     "Newborn Report": "",
     "next": "",
+    "No data found": "",
     "No Patient Level data to show for this commune": "",
     "No providers": "",
     "no risk": "",
+    "No risk": "",
     "No Risk": "",
     "no risk category": "",
-    "Not Set": "",
+    "Not set": "",
     "Nutrition": "",
     "Nutrition Registration": "",
     "Nutrition Report": "",
@@ -82,11 +84,13 @@
     "Reporter": "",
     "Reports": "",
     "risk": "",
+    "Risk": "",
     "Risk category": "",
     "Risk Level": "",
     "Roles": "",
     "Search ID, Reporter, Patients": "",
     "Select location": "",
+    "Select Location": "",
     "select pregnancy": "",
     "Select risk": "",
     "Select type": "",
