--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,6 +1,9 @@
 {
     "Admin": "",
     "Age": "Tuổi",
+    "age.days": "",
+    "age.months": "tháng",
+    "age.years": "Tuổi",
     "All clients": "",
     "Analysis": "Báo cáo phân tích",
     "ANC": "",
@@ -33,7 +36,6 @@
     "first": "Trang đầu",
     "Gravidity": "",
     "height": "",
-    "High Risk": "Báo động đỏ",
     "Home": "Trang chủ",
     "Household": "",
     "ID": "Mã ID",
@@ -48,8 +50,6 @@
     "Location of Residence": "",
     "Locations": "",
     "Log face": "",
-    "Log Face": "Danh sách tin nhắn",
-    "Low Risk": "",
     "Message": "Nội dung báo cáo",
     "Mother's Weight": "",
     "Mother's Weight Tracking": "Theo dõi Cân nặng bà mẹ",
@@ -60,9 +60,10 @@
     "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
     "no risk": "Bình thường ",
+    "No risk": "",
     "No Risk": "Bình thường",
     "no risk category": "",
-    "Not Set": "",
+    "Not set": "",
     "Nutrition": "DINH DƯỠNG",
     "Nutrition Registration": "",
     "Nutrition Report": "",
@@ -83,11 +84,13 @@
     "Reporter": "Người gửi",
     "Reports": "",
     "risk": "",
+    "Risk": "",
     "Risk category": "",
     "Risk Level": "Phân loại Nguy cơ Chọn",
     "Roles": "",
     "Search ID, Reporter, Patients": "Tìm kiếm",
     "Select location": "Địa điểm Chọn",
+    "Select Location": "",
     "select pregnancy": "",
     "Select risk": "Phân loại Nguy cơ Chọn",
     "Select type": "Loại tin nhắn Chọn",
