Refactor spelling on risk category string

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,7 +79,7 @@
     "pregnancy-chart": "",
     "previous": "",
     "Previous Pregnancy Risk": "",
-    "Red Alert": "",
+    "Red alert": "",
     "Report": "",
     "Reporter": "",
     "Reports": "",
