--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -79,7 +79,7 @@
     "pregnancy-chart": "",
     "previous": "Trước",
     "Previous Pregnancy Risk": "",
-    "Red Alert": "Báo động đỏ",
+    "Red alert": "Báo động đỏ",
     "Report": "Loại báo cáo",
     "Reporter": "Người gửi",
     "Reports": "",
