Update newly extracted locale files

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -5,111 +5,133 @@
     "age.months": "tháng",
     "age.years": "Tuổi",
     "All clients": "",
+    "An error occurred": "",
     "Analysis": "Báo cáo phân tích",
     "ANC": "",
+    "April": "",
+    "August": "",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
+    "Blood pressure": "",
+    "Chart could not load, an error occurred.": "",
     "Child": "",
-    "Child Height": "",
-    "Child Height Monitoring": "",
-    "Child Weight": "",
-    "Child Weight Monitoring": "",
     "Client Records": "",
     "cm": "",
     "Compartments": "Phân loại Nguy cơ",
     "could not find any edd": "",
-    "could not find any location": "",
-    "Could not find any risk categorization": "",
+    "Current Blood Pressure": "",
     "Current EDD": "",
     "Current Gravidity": "Số lần đã mang thai",
-    "current nutrition": "",
+    "Current Height": "",
+    "Current MUAC": "",
     "Current Parity": "Số lần đã đẻ",
-    "current pregnancy": "",
-    "Current symptoms": "Triệu chứng hiện tại",
-    "Current weight": "",
+    "Current Pregnancy": "",
+    "Current Symptoms": "",
+    "Current Weight": "",
     "Date": "Ngày",
-    "Days since birth": "",
+    "Days Since Birth": "",
+    "December": "",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
     "EDD": "Ngày đẻ dự kiến",
+    "Ethnicity": "",
     "Event Date": "Ngày",
     "Export data": "Tải về",
-    "first": "Trang đầu",
-    "Gravidity": "",
-    "height": "",
+    "February": "",
+    "Gender": "",
+    "HandWashing": "",
+    "Health Insurance number": "",
     "Home": "Trang chủ",
     "Household": "",
-    "ID": "Mã ID",
+    "Household Type": "",
     "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
+    "in PNC": "",
     "Inappropriate Feeding": "",
-    "Inappropriately Fed": "",
+    "Inappropriately fed": "",
+    "January": "",
+    "July": "",
+    "June": "",
     "kg": "",
-    "last": "Trang cuối",
     "Location": "Địa điểm",
-    "Location of birth": "",
-    "Location of residence": "",
-    "Location of Residence": "",
+    "Location Of Birth": "",
+    "Location Of Residence": "",
     "Locations": "",
     "Log face": "",
+    "Log Face": "",
+    "Login": "",
+    "March": "",
+    "May": "",
     "Message": "Nội dung báo cáo",
-    "Mother's Weight": "",
-    "Mother's Weight Tracking": "Theo dõi Cân nặng bà mẹ",
+    "N/A": "",
+    "Name": "",
     "NBC & PNC": "SAU SINH",
-    "Newborn Report": "",
+    "Network response was not ok": "",
     "next": "Tiếp",
+    "No chart data found": "",
     "No data found": "Không tìm thấy kết quả phù hợp",
     "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
-    "no risk": "Bình thường ",
     "No risk": "",
-    "No Risk": "Bình thường",
-    "no risk category": "",
-    "Not set": "",
+    "Normal": "",
+    "November": "",
     "Nutrition": "DINH DƯỠNG",
-    "Nutrition Registration": "",
-    "Nutrition Report": "",
-    "nutrition-chart": "",
+    "October": "",
     "OpenSRP": "",
     "Overweight": "",
-    "Parity": "",
     "Patient": "Bà mẹ",
     "Patient Details": "Thông tin Bà mẹ",
     "Patient ID": "Bà mẹ",
+    "Planned Delivery Location": "",
+    "pregnancy": "",
     "Pregnancy": "THAI SẢN",
-    "Pregnancy Registration": "",
-    "pregnancy-chart": "",
     "previous": "Trước",
     "Previous Pregnancy Risk": "",
+    "Previous Risks / Existing Medical Conditions": "",
     "Red alert": "Báo động đỏ",
     "Report": "Loại báo cáo",
     "Reporter": "Người gửi",
     "Reports": "",
     "risk": "",
     "Risk": "",
-    "Risk category": "",
+    "risk categorization": "",
+    "Risk Category": "",
     "Risk Level": "Phân loại Nguy cơ Chọn",
     "Roles": "",
     "Search ID, Reporter, Patients": "Tìm kiếm",
     "Select location": "Địa điểm Chọn",
     "Select Location": "",
-    "select pregnancy": "",
+    "Select pregnancy": "",
     "Select risk": "Phân loại Nguy cơ Chọn",
     "Select type": "Loại tin nhắn Chọn",
-    "Selected Commune": "",
-    "Severe Wasting": "",
+    "September": "",
+    "Severe wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
+    "Sign Out": "",
     "SMS Type": "Loại báo cáo",
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.&nbsp;<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
+    "Toilet": "",
     "Total": "Tổng",
+    "Total Children Under 2": "",
+    "Total Children Under 5": "",
+    "Total Mother": "",
+    "Total Newborn": "",
+    "Total Pregnancies": "",
+    "Total Pregnancies due in 1 week": "",
+    "Total Pregnancies due in 2 weeks": "",
     "Type": "Loại tin nhắn Chọn",
+    "Underweight": "",
     "Users": "",
     "View": "Xem",
     "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
     "Wasting": "",
-    "weight": "",
+    "Weight": "",
+    "Weight and Height": "",
+    "Weight and Height Monitoring": "",
+    "Weight monitoring": "",
+    "Welcome back,": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
