--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -5,111 +5,135 @@
     "age.months": "months",
     "age.years": "years",
     "All clients": "",
+    "An error occurred": "",
     "Analysis": "",
     "ANC": "",
+    "April": "",
+    "August": "",
     "Back": "",
     "Basic Information": "",
+    "Blood pressure": "",
+    "Chart could not load, an error occurred.": "",
     "Child": "",
-    "Child Height": "",
-    "Child Height Monitoring": "",
-    "Child Weight": "",
-    "Child Weight Monitoring": "",
     "Client Records": "",
     "cm": "",
     "Compartments": "",
     "could not find any edd": "",
-    "could not find any location": "",
-    "Could not find any risk categorization": "",
+    "Current Blood Pressure": "",
     "Current EDD": "",
     "Current Gravidity": "",
-    "current nutrition": "",
+    "Current Height": "",
+    "Current MUAC": "",
     "Current Parity": "",
-    "current pregnancy": "",
-    "Current symptoms": "",
-    "Current weight": "",
+    "Current Pregnancy": "",
+    "Current Symptoms": "",
+    "Current Weight": "",
     "Date": "",
-    "Days since birth": "",
+    "Days Since Birth": "",
+    "December": "",
     "Display of all messages received from MIECD in chronological order": "",
     "EDD": "",
+    "Ethnicity": "",
     "Event Date": "",
     "Export data": "",
-    "first": "",
-    "Gravidity": "",
-    "height": "",
+    "February": "",
+    "Gender": "",
+    "HandWashing": "",
+    "Health Insurance number": "",
     "Home": "",
     "Household": "",
-    "ID": "",
+    "Household Type": "",
     "Important analysis and indicators generated from collected data": "",
+    "in PNC": "",
     "Inappropriate Feeding": "",
-    "Inappropriately Fed": "",
+    "Inappropriately fed": "",
+    "January": "",
+    "July": "",
+    "June": "",
     "kg": "",
-    "last": "",
     "Location": "",
-    "Location of birth": "",
-    "Location of residence": "",
-    "Location of Residence": "",
+    "Location Of Birth": "",
+    "Location Of Residence": "",
     "Locations": "",
     "Log face": "",
+    "Log Face": "",
+    "Login": "",
+    "March": "",
+    "May": "",
     "Message": "",
-    "Mother's Weight": "",
-    "Mother's Weight Tracking": "",
+    "N/A": "",
+    "Name": "",
     "NBC & PNC": "",
-    "Newborn Report": "",
+    "Network response was not ok": "",
     "next": "",
+    "No chart data found": "",
     "No data found": "",
     "No Patient Level data to show for this commune": "",
     "No providers": "",
-    "no risk": "",
     "No risk": "",
-    "No Risk": "",
-    "no risk category": "",
-    "Not set": "",
+    "Normal": "",
+    "November": "",
     "Nutrition": "",
-    "Nutrition Registration": "",
-    "Nutrition Report": "",
-    "nutrition-chart": "",
+    "October": "",
     "OpenSRP": "",
     "Overweight": "",
-    "Parity": "",
     "Patient": "",
     "Patient Details": "",
     "Patient ID": "",
+    "Planned Delivery Location": "",
+    "pregnancy": "",
     "Pregnancy": "",
-    "Pregnancy Registration": "",
-    "pregnancy-chart": "",
     "previous": "",
     "Previous Pregnancy Risk": "",
+    "Previous Risks / Existing Medical Conditions": "",
     "Red alert": "",
     "Report": "",
     "Reporter": "",
     "Reports": "",
     "risk": "",
     "Risk": "",
-    "Risk category": "",
+    "risk categorization": "",
+    "Risk Category": "",
     "Risk Level": "",
     "Roles": "",
     "Search ID, Reporter, Patients": "",
     "Select location": "",
     "Select Location": "",
-    "select pregnancy": "",
+    "Select pregnancy": "",
     "Select risk": "",
     "Select type": "",
-    "Selected Commune": "",
-    "Severe Wasting": "",
+    "September": "",
+    "Severe wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
+    "Sign Out": "",
     "SMS Type": "",
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The Module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth reports/Death reports, Risk Reports, Risk alerts and ResponseReports.</1>",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.&nbsp;<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.&nbsp;<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "",
+    "Toilet": "",
     "Total": "",
+    "Total Children Under 2": "",
+    "Total Children Under 5": "",
+    "Total Mother": "",
+    "Total Mother_plural": "",
+    "Total Newborn": "",
+    "Total Newborn_plural": "",
+    "Total Pregnancies": "",
+    "Total Pregnancies due in 1 week": "",
+    "Total Pregnancies due in 2 weeks": "",
     "Type": "",
+    "Underweight": "",
     "Users": "",
     "View": "",
     "View the latest message updates about your patients.": "",
     "Wasting": "",
-    "weight": "",
+    "Weight": "",
+    "Weight and Height": "",
+    "Weight and Height Monitoring": "",
+    "Weight monitoring": "",
+    "Welcome back,": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "",
