--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,7 +25,7 @@
     "Current Height": "",
     "Current MUAC": "",
     "Current Parity": "",
-    "Current Pregnancy": "",
+    "Current pregnancy": "",
     "Current Symptoms": "",
     "Current Weight": "",
     "Date": "",
@@ -110,7 +110,7 @@
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.&nbsp;<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.&nbsp;<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
+    "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "",
     "Toilet": "",
     "Total": "",
