Translate logFace page title

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -55,8 +55,8 @@
     "Location Of Birth": "",
     "Location Of Residence": "",
     "Locations": "",
-    "Log face": "",
-    "Log Face": "",
+    "Log face": "danh sách tin nhắn",
+    "Log Face": "Danh sách tin nhắn",
     "Login": "",
     "March": "",
     "May": "",
@@ -81,7 +81,7 @@
     "Patient Details": "Thông tin Bà mẹ",
     "Patient ID": "Bà mẹ",
     "Planned Delivery Location": "",
-    "pregnancy": "",
+    "pregnancy": "thai sán",
     "Pregnancy": "THAI SẢN",
     "previous": "Trước",
     "Previous Pregnancy Risk": "",
