--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -8,8 +8,8 @@
     "An error occurred": "",
     "Analysis": "Báo cáo phân tích",
     "ANC": "",
-    "April": "",
-    "August": "",
+    "April": "Tháng Tư",
+    "August": "Tháng Tám",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
     "Blood pressure": "",
@@ -30,13 +30,13 @@
     "Current Weight": "",
     "Date": "Ngày",
     "Days Since Birth": "",
-    "December": "",
+    "December": "Tháng Mười hai",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
     "EDD": "Ngày đẻ dự kiến",
     "Ethnicity": "",
     "Event Date": "Ngày",
     "Export data": "Tải về",
-    "February": "",
+    "February": "Tháng Hai",
     "Gender": "",
     "HandWashing": "",
     "Health Insurance number": "",
@@ -45,11 +45,11 @@
     "Household Type": "",
     "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
     "in PNC": "",
-    "Inappropriate Feeding": "",
+    "Inappropriate Feeding": "Chế độ ăn không phù hợp",
     "Inappropriately fed": "",
-    "January": "",
-    "July": "",
-    "June": "",
+    "January": "Tháng Một ",
+    "July": "Tháng Bảy",
+    "June": "Tháng Sáu",
     "kg": "",
     "Location": "Địa điểm",
     "Location Of Birth": "",
@@ -58,8 +58,8 @@
     "Log face": "danh sách tin nhắn",
     "Log Face": "Danh sách tin nhắn",
     "Login": "",
-    "March": "",
-    "May": "",
+    "March": "Tháng Ba",
+    "May": "Tháng Năm",
     "Message": "Nội dung báo cáo",
     "N/A": "",
     "Name": "",
@@ -71,12 +71,12 @@
     "No Patient Level data to show for this commune": "Xã/phường này hiện không có Bà mẹ mang thai nào thuộc nhóm đã chọn",
     "No providers": "",
     "No risk": "",
-    "Normal": "",
+    "Normal": "Tháng Mười một",
     "November": "",
     "Nutrition": "DINH DƯỠNG",
-    "October": "",
+    "October": "Tháng Mười ",
     "OpenSRP": "",
-    "Overweight": "",
+    "Overweight": "Trẻ Quá cân",
     "Patient": "Bà mẹ",
     "Patient Details": "Thông tin Bà mẹ",
     "Patient ID": "Bà mẹ",
@@ -102,22 +102,22 @@
     "Select pregnancy": "",
     "Select risk": "Phân loại Nguy cơ Chọn",
     "Select type": "Loại tin nhắn Chọn",
-    "September": "",
+    "September": "Tháng Chín",
     "Severe wasting": "",
     "Showing reports for:&emsp;": "Showing reports for:&emsp;",
-    "Sign Out": "",
+    "Sign Out": "Thoát",
     "SMS Type": "Loại báo cáo",
     "Stunted": "",
-    "Stunting": "",
+    "Stunting": "Trẻ Thấp còi",
     "Teams": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
     "Toilet": "",
     "Total": "Tổng",
-    "Total Children Under 2": "",
-    "Total Children Under 5": "",
+    "Total Children Under 2": "Trẻ em dưới 2 tuổi",
+    "Total Children Under 5": "Trẻ em dưới 5 tuổi",
     "Total Mother": "",
-    "Total Newborn": "",
+    "Total Newborn": "Tổng số trẻ sơ sinh trong khu vực",
     "Total Pregnancies": "",
     "Total Pregnancies due in 1 week": "",
     "Total Pregnancies due in 2 weeks": "",
@@ -126,13 +126,13 @@
     "Users": "",
     "View": "Xem",
     "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
-    "Wasting": "",
+    "Wasting": "Trẻ Gầy còm",
     "Weight": "",
     "Weight and Height": "",
     "Weight and Height Monitoring": "",
     "Weight monitoring": "",
     "Welcome back,": "",
-    "Welcome to Newborn and Postnatal Care": "",
+    "Welcome to Newborn and Postnatal Care": "Hợp phần Dinh dưỡng",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
     "Welcome to the pregnancy dashboard": "Hợp phần Thai sản ",
