Update vi.json file

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -13,12 +13,12 @@
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
     "Blood pressure": "",
-    "Chart could not load, an error occurred.": "",
+    "Chart could not load, an error occurred.": "Chưa có thông tin",
     "Child": "",
     "Client Records": "",
     "cm": "",
     "Compartments": "Phân loại Nguy cơ",
-    "could not find any edd": "",
+    "could not find any edd": "Chưa có thông tin",
     "Current Blood Pressure": "",
     "Current EDD": "",
     "Current Gravidity": "Số lần đã mang thai",
@@ -26,23 +26,23 @@
     "Current MUAC": "",
     "Current Parity": "Số lần đã đẻ",
     "Current pregnancy": "",
-    "Current Symptoms": "",
+    "Current Symptoms": "Triệu chứng hiện tại",
     "Current Weight": "",
     "Date": "Ngày",
     "Days Since Birth": "",
     "December": "Tháng Mười hai",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
     "EDD": "Ngày đẻ dự kiến",
-    "Ethnicity": "",
+    "Ethnicity": "Dân tộc",
     "Event Date": "Ngày",
     "Export data": "Tải về",
     "February": "Tháng Hai",
     "Gender": "",
-    "HandWashing": "",
-    "Health Insurance number": "",
+    "HandWashing": "Chỗ rửa tay",
+    "Health Insurance number": "Số bảo hiểm",
     "Home": "Trang chủ",
     "Household": "",
-    "Household Type": "",
+    "Household Type": "Hộ nghèo",
     "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
     "in PNC": "",
     "Inappropriate Feeding": "Chế độ ăn không phù hợp",
@@ -62,7 +62,7 @@
     "May": "Tháng Năm",
     "Message": "Nội dung báo cáo",
     "N/A": "",
-    "Name": "",
+    "Name": "Tên",
     "NBC & PNC": "SAU SINH",
     "Network response was not ok": "",
     "next": "Tiếp",
@@ -92,7 +92,7 @@
     "Reports": "",
     "risk": "",
     "Risk": "",
-    "risk categorization": "",
+    "risk categorization": "Phân loại nguy cơ",
     "Risk Category": "",
     "Risk Level": "Phân loại Nguy cơ Chọn",
     "Roles": "",
@@ -104,7 +104,7 @@
     "Select type": "Loại tin nhắn Chọn",
     "September": "Tháng Chín",
     "Severe wasting": "",
-    "Showing reports for:&emsp;": "Showing reports for:&emsp;",
+    "Showing reports for:&emsp;": "Xem báo cáo của:&emsp;",
     "Sign Out": "Thoát",
     "SMS Type": "Loại báo cáo",
     "Stunted": "",
@@ -112,15 +112,15 @@
     "Teams": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
-    "Toilet": "",
+    "Toilet": "Nhà vệ sinh",
     "Total": "Tổng",
     "Total Children Under 2": "Trẻ em dưới 2 tuổi",
     "Total Children Under 5": "Trẻ em dưới 5 tuổi",
     "Total Mother": "",
     "Total Newborn": "Tổng số trẻ sơ sinh trong khu vực",
-    "Total Pregnancies": "",
-    "Total Pregnancies due in 1 week": "",
-    "Total Pregnancies due in 2 weeks": "",
+    "Total Pregnancies": "bà mẹ đang mang thai",
+    "Total Pregnancies due in 1 week": "Bà mẹ dự kiến đẻ trong vòng 7 ngày tới",
+    "Total Pregnancies due in 2 weeks": "Bà mẹ dự kiến đẻ trong vòng 2 tuần tới",
     "Type": "Loại tin nhắn Chọn",
     "Underweight": "",
     "Users": "",
