Replace string interpolation with util.format

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,10 @@
 {
+    "%d %s": "",
+    "%d Total children under 2": "",
+    "%d Total children under 5": "",
+    "%d Total pregnancies": "",
+    "%d Total Pregnancies due in 1 week": "",
+    "%d Total Pregnancies due in 2 weeks": "",
     "Admin": "",
     "Age": "",
     "age.days": "days",
@@ -17,6 +23,9 @@
     "Child": "",
     "Client Records": "",
     "cm": "",
+    "commune": "",
+    "Commune": "",
+    "communes": "",
     "Compartments": "",
     "could not find any edd": "",
     "Current Blood Pressure": "",
@@ -32,6 +41,9 @@
     "Days Since Birth": "",
     "December": "",
     "Display of all messages received from MIECD in chronological order": "",
+    "district": "",
+    "District": "",
+    "districts": "",
     "EDD": "",
     "Ethnicity": "",
     "Event Date": "",
@@ -44,9 +56,7 @@
     "Household": "",
     "Household Type": "",
     "Important analysis and indicators generated from collected data": "",
-    "in PNC": "",
     "Inappropriate Feeding": "",
-    "Inappropriately fed": "",
     "January": "",
     "July": "",
     "June": "",
@@ -61,6 +71,8 @@
     "March": "",
     "May": "",
     "Message": "",
+    "Mother’s Blood pressure tracking": "",
+    "Mother’s weight tracking ": "",
     "N/A": "",
     "Name": "",
     "NBC & PNC": "",
@@ -81,11 +93,14 @@
     "Patient Details": "",
     "Patient ID": "",
     "Planned Delivery Location": "",
-    "pregnancy": "",
     "Pregnancy": "",
+    "Pregnancy %d": "",
     "previous": "",
     "Previous Pregnancy Risk": "",
     "Previous Risks / Existing Medical Conditions": "",
+    "province": "",
+    "Province": "",
+    "provinces": "",
     "Red alert": "",
     "Report": "",
     "Reporter": "",
@@ -110,30 +125,28 @@
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
+    "The %d %s doesn't seem to have %s": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "",
     "Toilet": "",
     "Total": "",
-    "Total Children Under 2": "",
-    "Total Children Under 5": "",
-    "Total Mother": "",
-    "Total Mother_plural": "",
-    "Total Newborn": "",
-    "Total Newborn_plural": "",
-    "Total Pregnancies": "",
-    "Total Pregnancies due in 1 week": "",
-    "Total Pregnancies due in 2 weeks": "",
+    "Total %s": "",
+    "Total Mother in PNC": "",
+    "Total Mother in PNC_plural": "Total mothers in PNC",
+    "Total newborn": "",
+    "Total newborn_plural": "Total newborns",
     "Type": "",
     "Underweight": "",
     "Users": "",
     "View": "",
     "View the latest message updates about your patients.": "",
+    "Village": "",
+    "villages": "",
     "Wasting": "",
     "Weight": "",
     "Weight and Height": "",
     "Weight and Height Monitoring": "",
-    "Weight monitoring": "",
-    "Welcome back,": "",
+    "Welcome back, %s": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "",
