--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,4 +1,10 @@
 {
+    "%d %s": "",
+    "%d Total children under 2": "",
+    "%d Total children under 5": "",
+    "%d Total pregnancies": "",
+    "%d Total Pregnancies due in 1 week": "",
+    "%d Total Pregnancies due in 2 weeks": "",
     "Admin": "",
     "Age": "Tuổi",
     "age.days": "",
@@ -17,6 +23,9 @@
     "Child": "",
     "Client Records": "",
     "cm": "",
+    "commune": "",
+    "Commune": "",
+    "communes": "",
     "Compartments": "Phân loại Nguy cơ",
     "could not find any edd": "Chưa có thông tin",
     "Current Blood Pressure": "",
@@ -32,6 +41,9 @@
     "Days Since Birth": "",
     "December": "Tháng Mười hai",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
+    "district": "",
+    "District": "",
+    "districts": "",
     "EDD": "Ngày đẻ dự kiến",
     "Ethnicity": "Dân tộc",
     "Event Date": "Ngày",
@@ -44,9 +56,7 @@
     "Household": "",
     "Household Type": "Hộ nghèo",
     "Important analysis and indicators generated from collected data": "Những chỉ số và phân tích quan trọng liên quan tới sức khỏe của các bà mẹ đang mang thai trong khu vực",
-    "in PNC": "",
     "Inappropriate Feeding": "Chế độ ăn không phù hợp",
-    "Inappropriately fed": "",
     "January": "Tháng Một ",
     "July": "Tháng Bảy",
     "June": "Tháng Sáu",
@@ -61,6 +71,8 @@
     "March": "Tháng Ba",
     "May": "Tháng Năm",
     "Message": "Nội dung báo cáo",
+    "Mother’s Blood pressure tracking": "",
+    "Mother’s weight tracking ": "",
     "N/A": "",
     "Name": "Tên",
     "NBC & PNC": "SAU SINH",
@@ -81,11 +93,14 @@
     "Patient Details": "Thông tin Bà mẹ",
     "Patient ID": "Bà mẹ",
     "Planned Delivery Location": "",
-    "pregnancy": "thai sán",
     "Pregnancy": "THAI SẢN",
+    "Pregnancy %d": "",
     "previous": "Trước",
     "Previous Pregnancy Risk": "",
     "Previous Risks / Existing Medical Conditions": "",
+    "province": "",
+    "Province": "",
+    "provinces": "",
     "Red alert": "Báo động đỏ",
     "Report": "Loại báo cáo",
     "Reporter": "Người gửi",
@@ -110,28 +125,28 @@
     "Stunted": "",
     "Stunting": "Trẻ Thấp còi",
     "Teams": "",
+    "The %d %s doesn't seem to have %s": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
     "Toilet": "Nhà vệ sinh",
     "Total": "Tổng",
-    "Total Children Under 2": "Trẻ em dưới 2 tuổi",
-    "Total Children Under 5": "Trẻ em dưới 5 tuổi",
-    "Total Mother": "",
-    "Total Newborn": "Tổng số trẻ sơ sinh trong khu vực",
-    "Total Pregnancies": "bà mẹ đang mang thai",
-    "Total Pregnancies due in 1 week": "Bà mẹ dự kiến đẻ trong vòng 7 ngày tới",
-    "Total Pregnancies due in 2 weeks": "Bà mẹ dự kiến đẻ trong vòng 2 tuần tới",
+    "Total %s": "",
+    "Total mother in PNC": "",
+    "Total mother in PNC_plural": "",
+    "Total newborn": "",
+    "Total newborn_plural": "",
     "Type": "Loại tin nhắn Chọn",
     "Underweight": "",
     "Users": "",
     "View": "Xem",
     "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
+    "Village": "",
+    "villages": "",
     "Wasting": "Trẻ Gầy còm",
     "Weight": "",
     "Weight and Height": "",
     "Weight and Height Monitoring": "",
-    "Weight monitoring": "",
-    "Welcome back,": "",
+    "Welcome back, %s": "",
     "Welcome to Newborn and Postnatal Care": "Hợp phần Dinh dưỡng",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
