Update Vi locale files

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -132,8 +132,8 @@
     "Total": "Tổng",
     "Total %s": "",
     "Total mother in PNC": "",
-    "Total mother in PNC_plural": "",
-    "Total newborn": "",
+    "Total mother in PNC_plural": "Tổng số bà mẹ mới đẻ trong khu vực",
+    "Total newborn": "Tổng số trẻ sơ sinh trong khu vực",
     "Total newborn_plural": "",
     "Type": "Loại tin nhắn Chọn",
     "Underweight": "",
