Change the default key and namespace separators

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,4 @@
 {
-    "%d %s": "",
     "%d Total children under 2": "",
     "%d Total children under 5": "",
     "%d Total pregnancies": "",
@@ -71,6 +70,7 @@
     "March": "",
     "May": "",
     "Message": "",
+    "Mother's weight": "",
     "Mother’s Blood pressure tracking": "",
     "Mother’s weight tracking ": "",
     "N/A": "",
@@ -131,10 +131,12 @@
     "Toilet": "",
     "Total": "",
     "Total %s": "",
-    "Total Mother in PNC": "",
-    "Total Mother in PNC_plural": "Total mothers in PNC",
+    "Total mother in PNC": "",
+    "Total mother in PNC_plural": "",
     "Total newborn": "",
     "Total newborn_plural": "Total newborns",
+    "total_mother_in_pnc.%d %s": "%d %s",
+    "total_newborn.%d %s": "%d %s",
     "Type": "",
     "Underweight": "",
     "Users": "",
@@ -145,7 +147,7 @@
     "Wasting": "",
     "Weight": "",
     "Weight and Height": "",
-    "Weight and Height Monitoring": "",
+    "Weight and Height Tracking": "",
     "Welcome back, %s": "",
     "Welcome to Newborn and Postnatal Care": "",
     "Welcome to Nutrition Care": "",
