--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,10 +1,9 @@
 {
-    "%d %s": "",
-    "%d Total children under 2": "",
-    "%d Total children under 5": "",
-    "%d Total pregnancies": "",
-    "%d Total Pregnancies due in 1 week": "",
-    "%d Total Pregnancies due in 2 weeks": "",
+    "%d Total children under 2": "%d Trẻ em dưới 2 tuổi",
+    "%d Total children under 5": "%d Trẻ em dưới 5 tuổi",
+    "%d Total pregnancies": "Tổng số bà mẹ mang thai trong khu vực: %d",
+    "%d Total Pregnancies due in 1 week": "Bà mẹ dự kiến đẻ trong vòng 7 ngày tới: %d",
+    "%d Total Pregnancies due in 2 weeks": "Bà mẹ dự kiến đẻ trong vòng 2 tuần tới: %d",
     "Admin": "",
     "Age": "Tuổi",
     "age.days": "",
@@ -18,13 +17,13 @@
     "August": "Tháng Tám",
     "Back": "Quay lại",
     "Basic Information": "Thông tin Cơ bản",
-    "Blood pressure": "",
+    "Blood pressure": "Huyết áp",
     "Chart could not load, an error occurred.": "Chưa có thông tin",
     "Child": "",
     "Client Records": "",
     "cm": "",
-    "commune": "",
-    "Commune": "",
+    "commune": "xã",
+    "Commune": "Xã",
     "communes": "",
     "Compartments": "Phân loại Nguy cơ",
     "could not find any edd": "Chưa có thông tin",
@@ -41,8 +40,8 @@
     "Days Since Birth": "",
     "December": "Tháng Mười hai",
     "Display of all messages received from MIECD in chronological order": "Tổng hợp những cập nhật mới nhất được gửi tới hệ thống",
-    "district": "",
-    "District": "",
+    "district": "huyện",
+    "District": "Huyện",
     "districts": "",
     "EDD": "Ngày đẻ dự kiến",
     "Ethnicity": "Dân tộc",
@@ -71,9 +70,10 @@
     "March": "Tháng Ba",
     "May": "Tháng Năm",
     "Message": "Nội dung báo cáo",
-    "Mother’s Blood pressure tracking": "",
-    "Mother’s weight tracking ": "",
-    "N/A": "",
+    "Mother's weight": "Cân nặng",
+    "Mother’s Blood pressure tracking": "Theo dõi Huyết áp bà mẹ",
+    "Mother’s weight tracking ": "Theo dõi Cân nặng bà mẹ",
+    "N/A": "Chưa có thông tin",
     "Name": "Tên",
     "NBC & PNC": "SAU SINH",
     "Network response was not ok": "",
@@ -98,8 +98,8 @@
     "previous": "Trước",
     "Previous Pregnancy Risk": "",
     "Previous Risks / Existing Medical Conditions": "",
-    "province": "",
-    "Province": "",
+    "province": "tỉnh",
+    "Province": "Tỉnh",
     "provinces": "",
     "Red alert": "Báo động đỏ",
     "Report": "Loại báo cáo",
@@ -131,26 +131,28 @@
     "Toilet": "Nhà vệ sinh",
     "Total": "Tổng",
     "Total %s": "",
-    "Total mother in PNC": "",
-    "Total mother in PNC_plural": "Tổng số bà mẹ mới đẻ trong khu vực",
+    "Total mother in PNC": "Tổng số bà mẹ mới đẻ",
     "Total newborn": "Tổng số trẻ sơ sinh trong khu vực",
-    "Total newborn_plural": "",
+    "total_mother_in_pnc.%d %s": "%s %d",
+    "total_newborn.%d %s": "%s %d",
     "Type": "Loại tin nhắn Chọn",
     "Underweight": "",
     "Users": "",
     "View": "Xem",
     "View the latest message updates about your patients.": "Quản lý sức khỏe các bà mẹ đang mang thai trong khu vực",
-    "Village": "",
+    "Village": "Thôn",
     "villages": "",
     "Wasting": "Trẻ Gầy còm",
     "Weight": "",
     "Weight and Height": "",
-    "Weight and Height Monitoring": "",
+    "Weight and Height Tracking": "",
     "Welcome back, %s": "",
     "Welcome to Newborn and Postnatal Care": "Hợp phần Dinh dưỡng",
     "Welcome to Nutrition Care": "",
     "Welcome to the MIECD dashboard": "Chào mừng bạn đến với trang chủ MIECD Phần mềm Quản lý Sức khỏe Bà mẹ và Trẻ",
     "Welcome to the pregnancy dashboard": "Hợp phần Thai sản ",
+    "Total mother in PNC_plural": "Tổng số bà mẹ mới đẻ trong khu vực",
+    "Total newborn_plural": "Tổng số trẻ sơ sinh:",
     "NBC & PNC_CHILD": "",
     "NBC & PNC_WOMAN": ""
 }
