Fix test regressions

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,7 +125,7 @@
     "Stunted": "",
     "Stunting": "",
     "Teams": "",
-    "The %d %s doesn't seem to have %s": "",
+    "The %s %s doesn't seem to have %s": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>",
     "This is the aggregation and categorization of patients data": "",
     "Toilet": "",
