--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -72,7 +72,7 @@
     "Message": "Nội dung báo cáo",
     "Mother's weight": "Cân nặng",
     "Mother’s Blood pressure tracking": "Theo dõi Huyết áp bà mẹ",
-    "Mother’s weight tracking ": "Theo dõi Cân nặng bà mẹ",
+    "Mother’s weight tracking": "Theo dõi Cân nặng bà mẹ",
     "N/A": "Chưa có thông tin",
     "Name": "Tên",
     "NBC & PNC": "SAU SINH",
@@ -125,7 +125,7 @@
     "Stunted": "",
     "Stunting": "Trẻ Thấp còi",
     "Teams": "",
-    "The %d %s doesn't seem to have %s": "",
+    "The %s %s doesn't seem to have %s": "",
     "This dashboard displays information collected from MIECD Viet Nam Pregnancy Module for patients in your geographical location.<1>The module covers the whole pregnancy period from conception to delivery and includes Pregnancy Registration, ANC visits, Birth/Death reports, Risk Reports, Risk alerts and Response reports.</1>": "Theo dõi tình trạng sức khỏe từ lúc phát hiện mang thai tới lúc đẻ của các bà mẹ trong khu vực.<1>Cùng góp sức đảm bảo Không bà mẹ nào tử vong vì sinh nở…</1>",
     "This is the aggregation and categorization of patients data": "Theo dõi các bà mẹ thuộc nhóm nguy cơ và sắp tới ngày đẻ",
     "Toilet": "Nhà vệ sinh",
